# TropoLink

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  vcpkg.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake
core/: CMakeLists.txt
core/ai/: ollama_client.cpp  ollama_client.h
core/budget/: auto_design.cpp  auto_design.h  availability.cpp  availability.h  link_budget.cpp  link_budget.h  modulation.cpp  modulation.h  solver.cpp  solver.h
core/common/: expected.h  hash.h  sha256.cpp  sha256.h  units.h
core/geo/: atmosphere.cpp  atmosphere.h  coords.cpp  coords.h  geodesy.cpp  geodesy.h
core/project/: csv_export.cpp  csv_export.h  kml_export.cpp  kml_export.h  project.cpp  project.h
core/report/: report_content.cpp  report_content.h
core/terrain/: dem_dataset.cpp  dem_dataset.h  horizon.cpp  horizon.h  profile.cpp  profile.h  terrain_store.cpp  terrain_store.h
core/tropo/: fspl.h  itm_model.cpp  itm_model.h  loss_model.cpp  loss_model.h  model_suite.cpp  model_suite.h  p617.cpp  p617.h  scatter_geometry.cpp  scatter_geometry.h  statistics.cpp  statistics.h  tn101.cpp  tn101.h
docs/: model_references.md  third_party.md
resources/data/: equipment.json  modulations.json
resources/terrain/: n51e014.dt0  n51e015.dt0  n52e014.dt0  n52e015.dt0
tests/: CMakeLists.txt  test_atmosphere.cpp  test_budget.cpp  test_coords.cpp  test_geodesy.cpp  test_project.cpp  test_terrain.cpp  test_tropo.cpp  test_units.cpp
tools/: CMakeLists.txt  make_dted.cpp  render_topo_preview.cpp
ui/: CMakeLists.txt
ui/i18n/: tropolink_pl.ts
ui/map/: MapDownloader.cpp  MapDownloader.h  MapOverlayItem.cpp  MapOverlayItem.h  MapSources.cpp  MapSources.h  TileMapItem.cpp  TileMapItem.h
ui/models/: AppController.cpp  AppController.h  HelpContent.cpp  HelpContent.h
ui/profile/: CurveItem.cpp  CurveItem.h  ProfileItem.cpp  ProfileItem.h
ui/qml/: AutoDesignDialog.qml  HelpButton.qml  HelpDialog.qml  Main.qml  MapDownloadDialog.qml  MapView.qml  NumberField.qml  OnboardingTour.qml  PanelSection.qml  ProfilePanel.qml  ResultsPanel.qml  SitesPanel.qml  SolverPanel.qml  StatusBar.qml  Theme.qml  WaterfallChart.qml
ui/report/: PdfReport.cpp  PdfReport.h
